<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.taro.tusk.Closet">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="3"
       >


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_activity"
            android:onClick="toDifferentActivity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top"/>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    style="@style/closet_article_layout"
                    android:id="@+id/t_shirt">
                    <Button
                        style="@style/closet_article_buttons"
                        android:text="@string/t_shirt"
                        android:onClick="tempMethod"/>
                    <CheckBox
                        android:onClick="changeEnabled"
                        style="@style/enabled_buttons"/>
                    <CheckBox
                        android:onClick="changeNotified"
                        style="@style/notified_buttons"/>
                </RelativeLayout>

                <RelativeLayout
                    style="@style/closet_article_layout"
                    android:id="@+id/tank">
                    <Button
                        style="@style/closet_article_buttons"
                        android:text="@string/tank"
                        android:onClick="tempMethod"/>
                    <CheckBox
                        android:onClick="changeEnabled"
                        style="@style/enabled_buttons"/>
                    <CheckBox
                        android:onClick="changeNotified"
                        style="@style/notified_buttons"/>
                </RelativeLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom"/>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    style="@style/closet_article_layout"
                    android:id="@+id/shorts">
                    <Button
                        style="@style/closet_article_buttons"
                        android:text="@string/shorts"
                        android:onClick="tempMethod"/>
                    <CheckBox
                        android:onClick="changeEnabled"
                        style="@style/enabled_buttons"/>
                    <CheckBox
                        android:onClick="changeNotified"
                        style="@style/notified_buttons"/>
                </RelativeLayout>

                <RelativeLayout
                    style="@style/closet_article_layout"
                    android:id="@+id/skirt">
                    <Button
                        style="@style/closet_article_buttons"
                        android:text="@string/skirt"
                        android:onClick="tempMethod"/>
                    <CheckBox
                        android:onClick="changeEnabled"
                        style="@style/enabled_buttons"/>
                    <CheckBox
                        android:onClick="changeNotified"
                        style="@style/notified_buttons"/>
                </RelativeLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outerwear"/>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    style="@style/closet_article_layout"
                    android:id="@+id/sweater">
                    <Button
                        style="@style/closet_article_buttons"
                        android:text="@string/sweater"
                        android:onClick="tempMethod"/>
                    <CheckBox
                        android:onClick="changeEnabled"
                        style="@style/enabled_buttons"/>
                    <CheckBox
                        android:onClick="changeNotified"
                        style="@style/notified_buttons"/>
                </RelativeLayout>

                <RelativeLayout
                    style="@style/closet_article_layout"
                    android:id="@+id/raincoat">
                    <Button
                        style="@style/closet_article_buttons"
                        android:text="@string/raincoat"
                        android:onClick="tempMethod"/>
                    <CheckBox
                        android:onClick="changeEnabled"
                        style="@style/enabled_buttons"/>
                    <CheckBox
                        android:onClick="changeNotified"
                        style="@style/notified_buttons"/>
                </RelativeLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoes"/>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    style="@style/closet_article_layout"
                    android:id="@+id/boots">
                    <Button
                        style="@style/closet_article_buttons"
                        android:text="@string/boots"
                        android:onClick="tempMethod"/>
                    <CheckBox
                        android:onClick="changeEnabled"
                        style="@style/enabled_buttons"/>
                    <CheckBox
                        android:onClick="changeNotified"
                        style="@style/notified_buttons"/>
                </RelativeLayout>

                <RelativeLayout
                    style="@style/closet_article_layout"
                    android:id="@+id/sandals">
                    <Button
                        style="@style/closet_article_buttons"
                        android:text="@string/sandals"
                        android:onClick="tempMethod"/>
                    <CheckBox
                        android:onClick="changeEnabled"
                        style="@style/enabled_buttons"/>
                    <CheckBox
                        android:onClick="changeNotified"
                        style="@style/notified_buttons"/>
                </RelativeLayout>
                <RelativeLayout
                    style="@style/closet_article_layout"
                    android:id="@+id/sneakers">
                    <Button
                        style="@style/closet_article_buttons"
                        android:text="@string/sneakers"
                        android:onClick="tempMethod"/>
                    <CheckBox
                        android:onClick="changeEnabled"
                        style="@style/enabled_buttons"/>
                    <CheckBox
                        android:onClick="changeNotified"
                        style="@style/notified_buttons"/>
                </RelativeLayout>

            </LinearLayout>
        </HorizontalScrollView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"/>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    style="@style/closet_article_layout"
                    android:id="@+id/umbrella">
                    <Button
                        style="@style/closet_article_buttons"
                        android:text="@string/umbrella"
                        android:onClick="tempMethod"/>
                    <CheckBox
                        android:onClick="changeEnabled"
                        style="@style/enabled_buttons"/>
                    <CheckBox
                        android:onClick="changeNotified"
                        style="@style/notified_buttons"/>
                </RelativeLayout>
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
</ScrollView>