<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_gravity="start">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:rowCount="2"
        android:columnCount="2">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                style="@style/button_half_boxes"
                android:text="@string/title_activity_camera"
                android:id="@+id/camera_activity"
                android:onClick="toDifferentActivity"/>
            <Button
                style="@style/button_half_boxes"
                android:text="@string/title_activity_closet"
                android:id="@+id/closet_activity"
                android:onClick="toDifferentActivity"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                style="@style/button_half_boxes"
                android:text="@string/title_activity_weather"
                android:id="@+id/weather_activity"
                android:onClick="toDifferentActivity"/>
            <Button
                style="@style/button_half_boxes"
                android:text="temp"
                android:id="@+id/weather_activity_temp"
                android:onClick="toDifferentActivity"/>
        </TableRow>
    </TableLayout>
</LinearLayout>

    <!--GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:rowCount="2"
        android:columnCount="2"
        tools:context=".MainActivity"
        android:id="@+id/gridlayout">

        <Button

            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/title_activity_camera"
            android:id="@+id/camera_activity"
            android:onClick="toDifferentActivity"/>
        <Button

            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/title_activity_closet"
            android:id="@+id/closet_activity"
            android:onClick="toDifferentActivity"/>
        <Button

            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/title_activity_weather"
            android:id="@+id/weather_activity"
            android:onClick="toDifferentActivity"/>

    </GridLayout-->

